# src/main/kotlin/ukidelly/api/v1/user/models/UserLoginRequest.kt
@@ -1,13 +1,20 @@
 package ukidelly.api.v1.user.models
 
 import kotlinx.serialization.Serializable
+import kotlinx.serialization.encodeToString
+import kotlinx.serialization.json.Json
 
 
 @Serializable
-data class UserLoginRequest(val snsId: String, val email: String) {
-
-
+data class SocialLoginRequest(val snsId: String, val email: String) {
 	fun toJsonString(): String {
 		return """{"sns_id": "$snsId", "email": "$email"}"""
+	}
+}
+
+@Serializable
+data class EmailLoginReqeust(val email: String, val password: String) {
+	fun toJsonString(): String {
+		return Json.encodeToString(this)
 	}
 }
